# copier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/copicat/: args.py
src/copier/: __init__.py  args.py  utils.py
