[project]
name = "copicat"
version = "1.1.1"
description = "Programmatically copy file to and from configured locations"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "argparse>=1.4.0",
    "pyyaml>=6.0.3",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Environment :: Console",
]
authors = [
    { name = "Alvise Bruniera", email = "alvisebruniera@gmail.com" },
]

[project.scripts]
copicat = "copicat:main"

[project.urls]
Homepage = "https://github.com/KayJay7/copicat"
Repository = "https://github.com/KayJay7/copicat.git"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
